--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">FirstLab</string>
-    <string name="title_activity_end_game">EndGameActivity</string>
+        <string name="app_name">Super Game Counter</string>
+        <string name="username_label">Nombre de usuario</string>
+        <string name="play_button">Jugar</string>
 </resources>
