--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,30 @@
 <resources>
+        <!-- App -->
         <string name="app_name">Super Game Counter</string>
+
+        <!-- LauncherActivity -->
         <string name="username_label">Nombre de usuario</string>
         <string name="play_button">Jugar</string>
-        <string name="score_label">Puntuación:</string>
-        <string name="level_label">Nivel:</string>
+
+        <!-- MainActivity -->
+        <string name="welcome">Bienvenido, %1$s</string>
+        <string name="score_label">Puntuación: %1$d</string>
+        <string name="level_label">Nivel: %1$d</string>
         <string name="increase_button">Incrementar puntuación (+ aleatorio)</string>
         <string name="decrease_button">Decrementar puntuación (- doble del nivel)</string>
         <string name="end_game_button">End Game</string>
         <string name="good_progress">¡Vas en buen camino!</string>
+
+        <!-- EndGameActivity -->
+        <string name="end_title">Fin del juego</string>
+        <string name="end_congrats">¡Felicidades, alcanzaste el nivel 10!</string>
+        <string name="end_manual">Juego terminado. Pulsa el botón para volver a empezar.</string>
         <string name="send_data_button">Enviar datos...</string>
+        <string name="restart_button">Volver a iniciar</string>
         <string name="trophy_desc">Trophy</string>
 
+        <!-- Envío de datos -->
+        <string name="send_subject">Puntuación del jugador %1$s</string>
+        <string name="send_body">El jugador %1$s ha obtenido una puntuación de %2$d puntos y ha alcanzado el nivel %3$d.</string>
+        <string name="chooser_title">Enviar datos del jugador</string>
 </resources>
